--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   </head>
 
   <body class="min-h-screen bg-black text-zinc-100 antialiased">
-    <main class="mx-auto w-full max-w-xl px-4 py-6">
+    <main class="<%= content_for?(:main_class) ? yield(:main_class) : "mx-auto w-full max-w-xl px-4 py-6" %>">
       <%= yield %>
     </main>
   </body>
